test/1.2/errors/T_ECONDT.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
import "testing.dml";

template t {
    method init() {
        error "error";
    }
}

parameter p = true;
if ($p) {
    /// ERROR ECONDT
    is t;
}
